kubernetes/08-hpa/manifests/big-request.yaml
apiVersion: v1
kind: Pod
metadata:
  name: big-request
spec:
  restartPolicy: Never
  containers:
    - name: big-request
      image: nginx
      resources:
        requests:
          memory: "1000Gi"
