kubernetes/08-hpa/manifests/mem-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mem-test
spec:
  restartPolicy: Never
  containers:
    - name: mem-test
      image: busybox
      resources:
        limits:
          memory: "10Mi"
      command: ["sh", "-c", "dd if=/dev/zero of=/dev/null bs=50M"]
