kubernetes/08-hpa/manifests/web-deployment-with-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web-deployment
  name: web-deployment
  namespace: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - image: nginx:stable-alpine
        name: web
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
