kubernetes/08-hpa/manifests/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web-service
  name: web-service
  namespace: dev
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: web
  type: ClusterIP
